<resources>
    <string name="app_name">LuluChef</string>
    <string name="appName">"Lulu Kitchen "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">"  "</string>
    <string name="quote">Savoring the flavors that</string>
    <string name="quotee">ignite your senses ❤️</string>
    <string name="inspiration">Daily Inspiration</string>
    <string name="country">countries</string>
    <string name="category">Categories</string>
    <string name="todo">TODO</string>
    <string name="mealname">Meal Name</string>
    <string name="info">Info</string>
    <string name="instructions">Instructions\n</string>
    <string name="ingredient">Ingredient</string>
    <string name="steps">lets Cook\n</string>
    <string name="area">Area</string>
    <string name="fav">Favourites 🧡</string>
    <string name="setday">Set The Day</string>
    <string name="MealsList">Meals List</string>
    <string name="nonetwork">No Network</string>
    <string name="nonetmsg">Your device has no network. Please check your settings.</string>
    <string name="searchhere">search here\n</string>
    <string name="searching">serch</string>
    <string name="continue_str">Continue</string>


    <string-array name="countryflags">
        <item>https://www.worldometers.info/img/flags/us-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/uk-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ca-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ch-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/hr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/nl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/eg-flag.gif</item>
        <item>https://cdn.britannica.com/73/3473-004-6E573BFA/Flag-Philippines.jpg</item>
        <item>https://www.worldometers.info/img/flags/fr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/gr-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/in-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ei-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/it-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/jm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ja-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ke-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/my-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mx-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/mo-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/pl-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/po-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/rs-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/sp-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/th-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/ts-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/tu-flag.gif</item>
        <item>https://www.freepnglogos.com/uploads/globe-png/globe-icon-aquanox-icons-softiconsm-34.png</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>
        <item>https://www.worldometers.info/img/flags/vm-flag.gif</item>
    </string-array>
</resources>