<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeFrag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".home.view.HomeFragment">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/homeConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/appquote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/quote"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/appname"
                app:layout_constraintTop_toBottomOf="@+id/appname" />

            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:text="@string/appName"
                android:textColor="@color/lulu"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtInsp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/inspiration"
                android:textColor="@color/lulu"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/appquote"
                app:layout_constraintTop_toBottomOf="@+id/appquote" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inspRecycler"
                android:layout_width="414dp"
                android:layout_height="305dp"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/appname"
                app:layout_constraintTop_toBottomOf="@+id/txtInsp"
                tools:listitem="@layout/meal_item" />

            <TextView
                android:id="@+id/txtCon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/country"
                android:textColor="@color/lulu"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/inspRecycler"
                app:layout_constraintTop_toBottomOf="@+id/inspRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/txtCon"
                app:layout_constraintTop_toBottomOf="@+id/txtCon"
                tools:listitem="@layout/meal_item" />

            <TextView
                android:id="@+id/txtcat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/category"
                android:textColor="@color/lulu"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="@+id/contRecycler"
                app:layout_constraintTop_toBottomOf="@+id/contRecycler" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cateRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                app:layout_constraintStart_toStartOf="@+id/txtcat"
                app:layout_constraintTop_toBottomOf="@+id/txtcat" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>